hphp/hack/test/typecheck/reactive/mayberx7_1.php.exp
File "mayberx7_1.php", line 10, characters 10-55:
Reactive functions can only call other reactive functions. (Typing[4200])
  File "mayberx7_1.php", line 3, characters 10-16:
  This function is normal.
  File "mayberx7_1.php", line 10, characters 18-54:
  This argument caused function to be normal.
